# FreedomKey

./: CMakeLists.txt  README.md
.cursor/plans/: async_parallel_extraction_d82a9c44.plan.md
KeyZip/: CMakeLists.txt  archiveextractcallback.cpp  archiveextractcallback.h  archiveextractor.cpp  archiveextractor.h  archiveopencallback.cpp  archiveopencallback.h  archiveparser.cpp  archiveparser.h  archivetree.cpp  archivetree.h  archivetreewidget.cpp  archivetreewidget.h  archivetreewidgetitem.cpp  archivetreewidgetitem.h  asyncoutstreamwrapper.cpp  asyncoutstreamwrapper.h  commonhelper.cpp  commonhelper.h  extractworker.cpp  extractworker.h  filewriterthread.cpp  filewriterthread.h  guiddef.cpp  instreamwrapper.cpp  instreamwrapper.h  keyzipwindow.cpp  keyzipwindow.h  main.cpp  outstreamwrapper.cpp  outstreamwrapper.h
KeyZip/src/: archiveextractcallback.cpp  archiveextractcallback.h  archiveextractor.cpp  archiveextractor.h  archiveopencallback.cpp  archiveopencallback.h  archiveparser.cpp  archiveparser.h  archivetree.cpp  archivetree.h  archivetreewidget.cpp  archivetreewidget.h  archivetreewidgetitem.cpp  archivetreewidgetitem.h  asyncoutstreamwrapper.cpp  asyncoutstreamwrapper.h  commonhelper.cpp  commonhelper.h  extractworker.cpp  extractworker.h  filewriterthread.cpp  filewriterthread.h  guiddef.cpp  instreamwrapper.cpp  instreamwrapper.h  keyzipwindow.cpp  keyzipwindow.h  main.cpp  outstreamwrapper.cpp  outstreamwrapper.h  writebufferqueue.cpp  writebufferqueue.h
KeyZip/translations/: keyzip_en_US.ts  keyzip_zh_CN.ts
QuickExtract/: CMakeLists.txt  archivehelper.cpp  archivehelper.h  extractcallback.cpp  extractcallback.h  extractengine.cpp  extractengine.h  filewriterthread.cpp  guiddef.cpp  instreamwrapper.cpp  instreamwrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  opencallback.cpp  opencallback.h  writebufferqueue.cpp  writebufferqueue.h
QuickExtract/src/: archivehelper.cpp  archivehelper.h  compressengine.cpp  compressengine.h  compressoptionsdialog.cpp  compressoptionsdialog.h  compressoutstream.cpp  compressoutstream.h  extractcallback.cpp  extractcallback.h  extractengine.cpp  extractengine.h  guiddef.cpp  instreamwrapper.cpp  instreamwrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  opencallback.cpp  opencallback.h  updatecallback.cpp  updatecallback.h
QuickExtract/translations/: quickextract_en_US.ts  quickextract_zh_CN.ts
